Add full Thymeleaf support for the non-servlet-based TowActivity